--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 * {
     margin: 0 auto;
+    font-family: sans-serif;
 }
 
 .header-block {
@@ -20,6 +21,7 @@
     position: relative;
     width: 30px;
     height: 5px;
+    border-radius: 5px;
     background-color: black;
 }
 
@@ -31,6 +33,7 @@
     display: block;
     width: 30px;
     height: 5px;
+    border-radius: 5px;
     background-color: black;
     transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
 }
@@ -42,6 +45,7 @@
     display: block;
     width: 30px;
     height: 5px;
+    border-radius: 5px;
     background-color: black;
     transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
 }
@@ -105,7 +109,6 @@ input[type=checkbox]:checked + .switch-btn {
 .navigation-block{
     position: fixed;
     display: flex;
-
     top: 0;
     left: 0;
     width: 250px;
@@ -139,6 +142,10 @@ input[type=checkbox]:checked + .switch-btn {
     cursor: pointer;
 }
 
+.li-active {
+    color: white;
+}
+
 .navigation-list li:hover {
     color: white;
 }
@@ -148,6 +155,42 @@ input[type=checkbox]:checked + .switch-btn {
     flex-wrap: wrap;
     width: 95%;
     justify-content: center;
+}
+
+.game-string {
+    display: flex;
+    width: 100%;
+    height: 40px;
+}
+
+.game-button {
+    display: block;
+    width: 60%;
+    margin: 20px 30% 20px 30%;
+    height: 50px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 26px;
+    color: white;
+    background: linear-gradient(180deg,#007b7d,rgb(7, 255, 189) 100%,#fff 0,#fff);
+    transition: all 1s;
+}
+
+.game-button:hover {
+    box-shadow:0px 0px 15px 9px rgb(64, 60, 60);
+}
+
+.game-button-active {
+    width: 85px;
+    height: 85px;
+    font-size: 0;
+    background-image: url(./img/repeat.svg),linear-gradient(40deg,#005b67, rgb(29, 106, 132));
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: 32px 32px,cover;
+    background-position: 50%;
 }
 
 .card-container {
@@ -163,37 +206,74 @@ input[type=checkbox]:checked + .switch-btn {
     width: 298px;
     height: 248px;
     border: 1px;
-    box-shadow: 3px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5%;
     perspective: 1000px;
 }
 
-.card:hover{
-    box-shadow:0px 0px 15px 9px rgba(0,0,0,0.21);
-}
 
 .back-card {
     position: absolute;
     width: 100%;
     height: 100%;
-    transition: 1s;
+    transition: all 1s;
+    border-radius: 5%;
     backface-visibility: hidden;
     transform: rotateY(180deg);
 }
 
 .front-active {
     transform: rotateY(180deg);
+    box-shadow: none;
 }
 
 .back-active {
     transform: rotateY(360deg);
+    box-shadow:0px 0px 15px 9px rgba(0,0,0,0.21);
+    cursor: pointer;
 }
 
 .front-card {
     position: absolute;
     width: 100%;
     height: 100%;
-    transition: 1s;
+    border-radius: 5%;
+    transition: all 1s;
+    box-shadow: 3px 1px 2px 1px rgba(0, 0, 0, 0.2);
     backface-visibility: hidden;
+    cursor: pointer;
+}
+
+.front-card:hover{
+    box-shadow:0px 0px 15px 9px rgba(0,0,0,0.21);
+}
+
+.card--main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    margin: 20px;
+    width: 298px;
+    height: 248px;
+    border: 1px;
+    background: linear-gradient(180deg,#005b67,rgb(29, 106, 132) 40%,#fff 0,#fff);
+    border-radius: 5%;
+    box-shadow: 3px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    perspective: 1000px;
+    cursor: pointer;
+}
+
+.card--main:hover{
+    box-shadow:0px 0px 15px 9px rgba(0,0,0,0.21);
+}
+
+.main-card-img{
+    display: block;
+    margin-top: -15%;
+    width:55%;
+    height: 60%;
+    border: 15px solid white;
+    border-radius: 100%;
 }
 
 .card-header {
@@ -201,6 +281,7 @@ input[type=checkbox]:checked + .switch-btn {
     background-color: white;
     bottom: 0;
     padding: 0 15px 0 15px;
+    border-radius: 5px;
     width: 268px;
     height: 48px;
     text-align: center;
@@ -216,11 +297,10 @@ input[type=checkbox]:checked + .switch-btn {
     background-position: center 16px;
     bottom: 5px;
     right: 5px;
-    -webkit-transition: .3s;
-    transition: .3s;
     -webkit-filter: grayscale(1);
     filter: grayscale(1);
     cursor: pointer;
+    transition: all 1s;
 }
 
 .rotate:hover{
