--- a/styles.css
+++ b/styles.css
@@ -350,5 +350,42 @@ input[type=checkbox]:checked + .switch-btn {
     opacity: 0;
 }
 
+.win-or-lose {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    z-index: 5;
+}
 
+.win-or-lose--message{
+    margin: 0 auto;
+    margin-top: 120px;
+    font-size: 40px;
+    text-align: center;
+}
+
+.statistic-list {
+    padding: 0;
+    margin: 10px auto 10px auto;
+    width: 100%;
+    height: 100%;
+    list-style-type: none;
+}
+
+.list-name {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.statistic-row {
+    display: inline-flex;
+    width: 100%;
+}
+
+.statistic-row div {
+    width: 20%;
+    text-align: center;
+}
 
