--- a/styles.css
+++ b/styles.css
@@ -163,8 +163,11 @@ input[type=checkbox]:checked + .switch-btn {
 
 .game-string {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     width: 100%;
     height: 40px;
+    overflow-x: hidden;
 }
 
 .game-button {
@@ -176,7 +179,7 @@ input[type=checkbox]:checked + .switch-btn {
     border: none;
     outline: none;
     cursor: pointer;
-    font-size: 26px;
+    font-size: 20px;
     color: white;
     background: linear-gradient(40deg,#005b67, rgb(29, 106, 132));
     transition: all 1s;
@@ -198,6 +201,7 @@ input[type=checkbox]:checked + .switch-btn {
 }
 
 .star-compl {
+    display: block;
     margin: 0;
     width: 40px;
     height: 40px;
@@ -206,6 +210,7 @@ input[type=checkbox]:checked + .switch-btn {
 }
 
 .star-defeate {
+    display: block;
     margin: 0;
     width: 40px;
     height: 40px;
@@ -389,6 +394,7 @@ input[type=checkbox]:checked + .switch-btn {
     width: 20%;
     text-align: center;
     text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .statistic-row--first {
